<?xml version="1.0"?>
<package>
  <name>rtctree</name>
  <version>1.0.0</version>
  <description>
   <p>API for interacting with running RT-Components and managing RTM-based systems using OpenRTM-aist.</p>
  </description>

  <maintainer email="k-okada@jsk.t.u-toyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="iisaito@kinugarage.com">Isao Isaac Saito</maintainer>
  <author email="git@killbots.net">Geoffrey Biggs</author>
  <author email="k-okada@jsk.t.u-toyo.ac.jp">Kei Okada</author>

  <license>EPL</license>
  <url type="website">http://ros.org/wiki/openrtm_tools</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>unzip</build_depend>
  <build_depend>python-omniorb</build_depend>

  <export/>

</package>