<?xml version="1.0"?>
<package>
  <name>rtshell</name>
  <version>1.0.0</version>
  <description>
   <p>Shell commands for managing RT-Middleware running on OpenRTM-aist.</p>
  </description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="iisaito@kinugarage.com">Isao Isaac Saito</maintainer>
  <author email="git@killbots.net">Geoffrey Biggs</author>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>

  <license>EPL</license>
  <url type="website">http://ros.org/wiki/openrtm_tools</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>unzip</build_depend>

  <export/>
</package>