<?xml version="1.0"?>
<package>
  <name>rtsprofile</name>
  <version>1.0.1</version>

  <description>
   <p>Library to read, manipulate and write RT system profiles using the RTSProfile XML schema.</p>
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei OKada</maintainer>
  <maintainer email="iisaito@kinugarage.com">Isao Isaac Saito</maintainer>
  <author email="git@killbots.net">Geoffrey Biggs</author>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei OKada</author>

  <license>EPL</license>
  <url type="website">http://ros.org/wiki/openrtm_tools</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>unzip</build_depend>

  <export/>

</package>